Fix code spacing

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -176,7 +176,7 @@ details:not([open]) summary i {
   cursor: pointer;
 }
 
-.highlight {
+.code .highlight {
   margin-top: 0 !important;
   margin-bottom: 0 !important;
 }
